fix: updating role and warehouse
