# src/main/routes/user/UserRoutes.js
@@ -1,7 +1,7 @@
 import express from "express";
 import * as UserController from "../../controllers/user/UserController.js";
 import { validateBody } from "../../middleware/validate.js";
-import { UpdateUserDto } from "../../dto/user/User.dto.js";
+import {UpdateRoleDto, UpdateUserDto} from "../../dto/user/User.dto.js";
 import {authenticateJWT, authorizeAdminOrManager} from "../../middleware/jwt.js";
 
 const router = express.Router();
@@ -11,5 +11,6 @@ router.get("/me", authenticateJWT, UserController.getUserById);
 router.put("/me", authenticateJWT, validateBody(UpdateUserDto), UserController.updateUser);
 router.delete("/me", authenticateJWT, UserController.deleteUser);
 router.get("/manager", authenticateJWT, UserController.getManagers);
+router.patch("/role", authenticateJWT, authorizeAdminOrManager, validateBody(UpdateRoleDto), UserController.updateUser)
 
 export default router;
